RESOLVED FIXED260633
pointerevent_movementxy.html?mouse WPT is failing on safaridriver after 265730@main
https://bugs.webkit.org/show_bug.cgi?id=260633
Summary pointerevent_movementxy.html?mouse WPT is failing on safaridriver after 26573...
Abrar Rahman Protyasha
Reported 2023-08-23 16:26:03 PDT
We fixed the pointerevent_movementxy.html?mouse WPT to pass locally using WKTR in https://bugs.webkit.org/show_bug.cgi?id=258780 (265730@main), but despite this fix, we still fail this test when the WPT test runner runs it using the `safaridriver` binary. Note that this is likely not an event handling issue in WebKit because this WPT also fails on the GTK port at ToT. We should investigate why this fails.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-23 16:26:31 PDT
Abrar Rahman Protyasha
Comment 2 2023-08-23 16:33:23 PDT
(In reply to Abrar Rahman Protyasha from comment #0) > handling issue in WebKit because this WPT also fails on the GTK port at ToT. Minor correction from the previous comment: this WPT also fails on the GTK port at ToT when run under safaridriver. https://wpt.fyi/results/pointerevents/pointerevent_movementxy.html%3Fmouse?label=master&label=experimental&product=chrome&product=firefox&product=safari&product=webkitgtk&view=interop&q=label%3Ainterop-2023-events
Abrar Rahman Protyasha
Comment 3 2023-08-25 16:13:40 PDT
EWS
Comment 4 2023-08-28 15:26:37 PDT
Committed 267367@main (7d047e3205fe): <https://commits.webkit.org/267367@main> Reviewed commits have been landed. Closing PR #17089 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.