pointerevent_movementxy.html?mouse WPT is failing on safaridriver after 265730@main https://bugs.webkit.org/show_bug.cgi?id=260633 rdar://114350545

Reviewed by Aditya Keerthi.

The pointerevent_movementxy.html?mouse WPT was made to pass on WKTR in
265730@main, but this test continued to fail when run through the WPT +
safaridriver tooling.

It turns out that we're just never propagating the mousemove event
deltas before sending NSEvent instances in
WebAutomationSession::platformSimulateMouseInteraction. To fix this, we
make two changes:

1. Keep track of the previous mouse click by calling into
WebAutomationSession::updateClickCount().
2. Follow the precedent set by EventSenderProxy in WKTR and assign the
deltaX/Y fields of a CGEvent, finally initializing an NSEvent from it.

No new tests because we do not expect WebKit behavior to change.

* Source/WebKit/UIProcess/Automation/WebAutomationSession.h:

Provide default values to the maxTime and maxDistance arguments in
WebAutomationSession::updateClickCount(). This matches the time and
distance heuristics used in EventSenderProxy::updateClickCountForButton.

* Source/WebKit/UIProcess/Automation/mac/WebAutomationSessionMac.mm:
(WebKit::WebAutomationSession::platformSimulateMouseInteraction):

Canonical link: https://commits.webkit.org/267367@main